# LichtFeld-Studio

./: .gitignore  CMakeLists.txt  README.md  build_lichtfeld.ps1  vcpkg.json
.github/workflows/: nightly.yml  ubuntu.yml  windows.yml
cmake/: FetchUV.cmake
docs/: PYTHON_API.md  Python_API_issues.md  Python_UI.md
eval/: benchmark_mipnerf360_adc.sh  benchmark_mipnerf360_mcmc.sh  default_optimization_params.json  timing_mipnerf360_mcmc.sh
gsplat/: CMakeLists.txt  Cameras.h
include/core/: camera.hpp  image_io.hpp  logger.hpp  parameters.hpp  pinned_memory_allocator.hpp  tensor.hpp
include/core_new/: camera.hpp  events.hpp  logger.hpp  splat_data.hpp  splat_data_transform.hpp
include/lfs/kernels/: ssim.cuh
include/loader/: cache_image_loader.hpp
include/loader_new/: cache_image_loader.hpp  loader.hpp
include/rendering/: rendering.hpp
include/rendering_new/: render_constants.hpp  rendering.hpp
parameter/: default_optimization_params.json  mcmc_optimization_params.json
src/: application.cpp  main.cpp
src/app/: application.cpp  main.cpp  splash_screen.cpp
src/core/: CMakeLists.txt  argument_parser.cpp  camera.cpp  image_io.cpp  parameters.cpp  splat_data_mirror.cpp
src/core/cuda/: CMakeLists.txt  memory_arena.cu  memory_arena.hpp
src/core/event_bridge/: CMakeLists.txt
src/core/tensor/: CMakeLists.txt  cuda_stream_pool.cpp  pinned_memory_allocator.cpp  tensor.cpp  tensor_advanced_ops.cpp  tensor_broadcast.cpp  tensor_broadcast_ops.cu  tensor_dot_optimized.cu  tensor_masking_ops.cpp  tensor_masking_ops.cu  tensor_matrix_ops.cpp  tensor_matrix_ops.cu  tensor_movement_ops.cpp  tensor_ops.cu  tensor_random_ops.cpp  tensor_random_ops.cu  tensor_shape_ops.cpp  tensor_strided_ops.cu  tensor_unified_ops.cpp  tensor_utils.cpp  tensor_warp_reduce.cu
src/core_new/: CMakeLists.txt  argument_parser.cpp  camera.cpp  parameters.cpp  splat_data.cpp  splat_data_transform.cpp
src/core_new/tensor/: tensor.cpp  tensor_masking_ops.cpp  tensor_masking_ops.cu  tensor_ops.cu  tensor_unified_ops.cpp
src/io/: CMakeLists.txt  cache_image_loader.cpp  nvcodec_image_loader.cpp  nvcodec_image_loader.hpp  pipelined_image_loader.cpp  video_frame_extractor.cpp  video_frame_extractor.hpp
src/io/cuda/: image_format_kernels.cu  image_format_kernels.cuh
src/io/formats/: colmap.cpp  colmap.hpp  ply.cpp  transforms.cpp
src/io/loaders/: blender_loader.cpp  ply_loader.cpp
src/loader/: cache_image_loader.cpp
src/loader/formats/: colmap.cpp
src/loader_new/: cache_image_loader.cpp  nvcodec_image_loader.cpp  nvcodec_image_loader.hpp
src/loader_new/formats/: colmap.cpp
src/mcp/: CMakeLists.txt  mcp_training_context.cpp  selection_client.cpp  selection_client.hpp
src/project/: project.cpp
src/project_new/: project.cpp
src/python/: CMakeLists.txt  package_manager.cpp  package_manager.hpp  py_panel_registry.cpp  py_panel_registry.hpp  python_runtime.cpp  python_runtime.hpp  runner.cpp  runner.hpp  subprocess.hpp  ui_hooks.cpp  ui_hooks.hpp
src/rendering/: camera_frustum_renderer.cpp  camera_frustum_renderer.hpp  gs_rasterizer_tensor.cpp  gs_rasterizer_tensor.hpp  rendering_engine_impl.cpp  rendering_engine_impl.hpp  rendering_pipeline.cpp  rendering_pipeline.hpp  viewport_gizmo.cpp
src/rendering_new/: CMakeLists.txt  bbox_renderer.cpp  bbox_renderer.hpp  camera_frustum_renderer.cpp  camera_frustum_renderer.hpp  cuda_gl_interop.cpp  gl_state_guard.hpp  gs_rasterizer_tensor.cpp  gs_rasterizer_tensor.hpp  rendering_engine_impl.cpp  rendering_pipeline.cpp  rendering_pipeline.hpp  viewport_gizmo.cpp  viewport_gizmo.hpp
src/sequencer/: interpolation.cpp  keyframe.hpp  timeline.cpp  timeline.hpp
src/training/: CMakeLists.txt  dataset.hpp  trainer.cpp  trainer.hpp
src/training_debug/: training_debug.cpp
src/training_new/: CMakeLists.txt  trainer.cpp  trainer.hpp  training_setup.cpp
src/training_new/fastgs/rasterization/include/: buffer_utils.h
src/training_new/fastgs/rasterization/src/: rasterization_api.cu  rasterizer_memory_arena.cu
src/training_new/kernels/: mcmc_kernels.cu  mcmc_kernels.hpp  ssim.cu
src/training_new/losses/: photometric_loss.cpp  photometric_loss.hpp  regularization.cpp  regularization.hpp
src/training_new/optimizer/: adam_optimizer.cpp  adam_optimizer.hpp  scheduler.hpp
src/training_new/rasterization/: fast_rasterizer.cpp  fast_rasterizer.hpp  gsplat_rasterizer.cpp  gsplat_rasterizer.hpp
src/training_new/rasterization/fastgs/rasterization/include/: kernel_utils.cuh  kernels_backward.cuh
src/training_new/rasterization/gsplat/: CMakeLists.txt  Cameras.cuh  Common.h  ProjectionUT3DGSFused.cu  RasterizeToPixelsFromWorld3DGSBwd.cu  RasterizeToPixelsFromWorld3DGSFwd.cu
src/training_new/strategies/: default_strategy.cpp  mcmc.cpp  mcmc.hpp  strategy_utils.cpp
src/visualizer/: CMakeLists.txt  visualizer_impl.cpp  visualizer_impl.hpp
src/visualizer_new/: CMakeLists.txt  visualizer_impl.cpp  visualizer_impl.hpp
tests/: CMakeLists.txt  benchmark_losses.cpp  benchmark_pipelined_loader.cpp  benchmark_strided_tensors.cpp  test_aligned_memory_pool.cpp  test_bilateral_grid.cpp  test_broadcast_benchmark.cpp  test_bug_regressions.cpp  test_bugs_found.cpp  test_checkpoint_resume.cpp  test_critical_fixes.cpp  test_cub_reduction_benchmark.cpp  test_cuda_streams.cpp  test_expression_templates.cpp  test_extended_unary_ops_vs_torch.cpp  test_fusion_benchmark.cpp  test_gather_benchmark.cpp  test_geometry.cpp  test_gsplat_rasterizer.cpp  test_gsplat_training_debug.cpp  test_gsplat_vs_legacy_gsplat_gut.cpp  test_gut_gsplat_comparison.cpp  test_kmeans.cpp  test_lfs_adam_optimizer.cpp  test_lfs_losses.cpp  test_loader_comparison.cpp  test_loss_gradients.cpp  test_main.cpp  test_mcmc_add_new_gs_comparison.cpp  test_mcmc_kernels.cpp  test_mcmc_memory_ops.cpp  test_memory_pool_benchmark.cpp  test_permute_upload_benchmark.cpp  test_python_integration.cpp  test_reduction_benchmark.cpp  test_render_modes.cpp  test_scalar_reduction_benchmark.cpp  test_scene_validity.cpp  test_sort_minimal.cpp  test_sparsity_debug.cpp  (+33 more)
tests/python/: conftest.py
(+225 files in other folders)
